discussion/kv_engine/188370/188370_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55672: RangeScan don't invoke sendResponse with RangeScan lock

Using std::move, the buffer of scanned data can be moved to the outer
edge of the RangeScan continue path so it can be "sent" with none of
the RangeScan locks held.

Change-Id: Ib814f0875cffc81ffb59e1ea7dc94d5195f3e765

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-27 11:07:48.000000000
Message: 
Uploaded patch set 14.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-27 12:06:55.000000000
Message: 
Patch Set 14: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52584/ : FAILURE

Failure of GoogleTest "AllBucketTypes/PassiveDurabilityMonitorTest.HPS_Majority/couchstore_persistent_full_eviction":

<pre>
[ RUN      ] AllBucketTypes/PassiveDurabilityMonitorTest.HPS_Majority/couchstore_persistent_full_eviction
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.301703" is not a directory" thrown in SetUp().
unknown file: error: C++ exception with description "Access violation - no RTTI data!" thrown in TearDown().
[  FAILED  ] AllBucketTypes/PassiveDurabilityMonitorTest.HPS_Majority/couchstore_persistent_full_eviction, where GetParam() = "backend=couchstore:bucket_type=persistent:item_eviction_policy=full_eviction" (2 ms)
AllBucketTypes/PassiveDurabilityMonitorTest.HPS_Majority/couchstore_persistent_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52584/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44112/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:46:27:
error: unknown type name "CookieIface"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44112/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23108/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:17:26: error: out-of-line definition of "RangeScanContinueResult" does not match any declaration in "RangeScanContinueResult" [clang-diagnostic-error]
RangeScanContinueResult::RangeScanContinueResult(std::vector<uint8_t> buffer,
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:22:31: error: out-of-line definition of "send" does not match any declaration in "RangeScanContinueResult" [clang-diagnostic-error]
void RangeScanContinueResult::send(CookieIface& cookie,
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:27:9: error: unknown type name "NonBucketAllocationGuard" [clang-diagnostic-error]
        NonBucketAllocationGuard guard;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:37:33: error: out-of-line definition of "RangeScanContinueResultPartial" does not match any declaration in "RangeScanContinueResultPartial" [clang-diagnostic-error]
RangeScanContinueResultPartial::RangeScanContinueResultPartial(
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:46:27: error: unknown type name "CookieIface" [clang-diagnostic-error]
    virtual void complete(CookieIface& cookie) = 0;
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:49:34: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    RangeScanContinueResult(std::vector<uint8_t> buffer, bool keyOnly);
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:51:15: error: unknown type name "CookieIface" [clang-diagnostic-error]
    void send(CookieIface& cookie, cb::engine_errc status);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:51:40: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    void send(CookieIface& cookie, cb::engine_errc status);
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:53:10: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    std::vector<uint8_t> responseBuffer;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:64:41: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    RangeScanContinueResultPartial(std::vector<uint8_t> buffer, bool keyOnly);
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:70:27: error: unknown type name "CookieIface" [clang-diagnostic-error]
    virtual void complete(CookieIface& cookie);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:76:47: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    RangeScanContinueResultWithReadBytes(std::vector<uint8_t> buffer,
                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:83:27: error: unknown type name "CookieIface" [clang-diagnostic-error]
    virtual void complete(CookieIface& cookie);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:92:38: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    RangeScanContinueResultMore(std::vector<uint8_t> buffer,
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:100:27: error: unknown type name "CookieIface" [clang-diagnostic-error]
    virtual void complete(CookieIface& cookie);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:106:42: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    RangeScanContinueResultComplete(std::vector<uint8_t> buffer,
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:113:27: error: unknown type name "CookieIface" [clang-diagnostic-error]
    virtual void complete(CookieIface& cookie);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:119:43: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    RangeScanContinueResultCancelled(std::vector<uint8_t> buffer,
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:123:27: error: unknown type name "CookieIface" [clang-diagnostic-error]
    virtual void complete(CookieIface& cookie) {
                          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23108/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:17:26:
error: out-of-line definition of "RangeScanContinueResult" does not match any declaration in "RangeScanContinueResult" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23108/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25640/ : FAILURE

Compile error at [2023-03-27T11:43:38.586Z] ../kv_engine/engines/ep/src/range_scans/range_scan_types.h:46:27:
error: ?CookieIface? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25640/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23408/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12841/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1917/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25177/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26494/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24768/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33592/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12922/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
